--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,10 @@ android {
     compileSdkVersion 27
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
-        applicationId "com.example.tamara.comp3074_project"
+
+        applicationId "ccom.example.tamara.comp3074_project"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,7 +21,6 @@ android {
 }
 
 dependencies {
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
     implementation 'com.android.support:design:27.1.1'
+
 }
