--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+
+
 
 }
